apps/immich/base/immich-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        fsGroup: 0
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:release"
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 3001
          livenessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
              subPath: library
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-server-service
  name: immich-server-service
  namespace: immich
spec:
  ports:
  - port: 2283
    protocol: TCP
    targetPort: 2283
    nodePort: 30075
  selector:
    app: immich-server
  type: NodePort
