apps/immich/base/immich-ml-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      securityContext:
        fsGroup: 0
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      resources:
        limits:
          memory: "8Gi"
          cpu: "2000m"
        requests:
          memory: "4Gi"
          cpu: "1000m"
      containers:
      - name: immich-machine-learning
        image: "ghcr.io/immich-app/immich-machine-learning:release"
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3003
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 3003
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - name: model-cache
          mountPath: /cache
        - name: library
          mountPath: /usr/src/app/upload
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: immich-model-cache
      - name: library
        persistentVolumeClaim:
          claimName: immich-library-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
  - port: 3003
    targetPort: 3003
    protocol: TCP
