apps/immich/base/immich-postgresql-endpoint.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-postgresql
  namespace: immich
subsets:
  - addresses:
      - ip: 192.168.178.207
    ports:
      - port: 5432
