apps/immich/base/immich-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: immich-route
  namespace: immich
spec:
  hostnames:
  - immich.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: immich-server
      port: 2283
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
